# physics-bench

./: .gitignore  README.md  main.py  pyproject.toml
docs/: sequence_diagam.drawio  sequence_diagram.mermaid
physics_bench/: prompts.py
physics_bench/benchmark/: __init__.py  evaluator.py  runner.py
physics_bench/dataset/: __init__.py  base_loader.py  downloader.py  loader.py  scibench_loader.py  ugphysics_loader.py
physics_bench/llm/: __init__.py  anthropic_client.py  base.py  gemini_client.py  ollama_client.py  openai_client.py  qwen_client.py  registry.py
physics_bench/utils/: __init__.py  config.py  logging_config.py
