[project]
name = "physics-bench"
version = "0.1.0"
description = "LLM physics QA benchmark"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "langchain>=0.3.27",
    "langchain-openai>=0.3.35",
    "openai>=2.3.0",
    "pydantic>=2.12.1",
    "python-dotenv>=1.1.1",
    "rich>=14.2.0",
    "tiktoken>=0.12.0",
    "typer>=0.19.2",
    "datasets>=2.14.0",
]
